[tool.poetry]
name = "slofop"
version = "0.2.0"
description = "A relatively simple and good-looking logging library for Python, with relatively good customisability."
authors = ["PaddeCraft <paddecraft@gmail.com>"]
readme="README.md"
repository="https://github.com/PaddeCraft/slofop"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
